Fix StatusButton text overflow styling

--- a/features/ui/button/button.module.scss
+++ b/features/ui/button/button.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: space.$s2;
   border-radius: space.$s1;
   border: none;
