--- a/features/ui/status-button/status-button.module.scss
+++ b/features/ui/status-button/status-button.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: space.$s2;
   border: none;
   border-radius: space.$s1;
@@ -34,20 +35,21 @@
 }
 
 .sm {
-  height: 1.5rem;
-  padding: 0.5rem 1.25rem;
-  font: font.$text-sm-medium;
+  // Remove hard coded height values to allow button to expand to text
+  // height: 1.5rem;
+  padding: 0.25rem 1.25rem;
+  font: font.$text-sm-regular;
 }
 
 .md {
-  height: 2rem;
-  padding: 0.5rem 1.5rem;
+  // height: 2rem;
+  padding: 0.25rem 1.5rem;
   font: font.$text-md-regular;
 }
 
 .lg {
-  height: 2.5rem;
-  padding: 0.75rem 1.5rem;
+  // height: 2.5rem;
+  padding: 0.5rem 1.5rem;
   font: font.$text-md-regular;
 
   &:focus {
